fix: redesign asd article
Signed-off-by: oscitate <ephie8654@outlook.com>

--- a/articleAssets/aboutmentalhealth/asd/page1.html
+++ b/articleAssets/aboutmentalhealth/asd/page1.html
@@ -4,18 +4,38 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-  <h2>TL:DR</h2>
-  <p style="font-style: italic;">Date of post: 14 Apr 24</p>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+    <img style="width: 100%; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/aboutmentalhealth.png">
 
-	<p>
-		Autism Spectrum Disorder (ASD) is a type of lifelong neurodevelopmental condition that can be detected in early childhood. Based on World Health Organisation, about 1 in 100 children has autism. Characteristics differ across individual but generally causes key difficulties in social interaction and communication and can exhibit restrictive or repetitive behaviours/ interest that can cause some dysfunction in school, work or other aspects of life. Early and proper treatment can help people with ASD build the relevant social skills to lead a more positive life!
-	</p>
+		<p>
+			Autism Spectrum Disorder (ASD) is a type of lifelong neurodevelopmental condition that can be detected in early childhood. Based on World Health Organisation, about 1 in 100 children has autism. Characteristics differ across individual but generally causes key difficulties in social interaction and communication and can exhibit restrictive or repetitive behaviours/ interest that can cause some dysfunction in school, work or other aspects of life. Early and proper treatment can help people with ASD build the relevant social skills to lead a more positive life!
+		</p>
+	</div>
 </body>
 </html>
