--- a/articleAssets/aboutmentalhealth/asd/page10.html
+++ b/articleAssets/aboutmentalhealth/asd/page10.html
@@ -4,28 +4,48 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<h2>YOU MAY BE INTERESTED IN THESE TOO:</h2>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<b style="font-style: italic;">If you have or believe you have ASD and it is severely impacting your life, do seek professional help as soon you can! :) Remember given the right treatment, these problems can be managed to help you go through your NS life smoothly and improve your overall mental well-being/ functioning in the future!</b>
 
-	<div style="display: flex">
-		<div style="display: flex; flex-direction: column; flex: 1">
-			<a href="internal:///thisarticle?category=aboutmentalhealth&title=Depression&id=" style="color: #765000">About Mental Health – Depression</a><br>
-			<a href="internal:///thisarticle?category=aboutmentalhealth&title=Anxiety&id=" style="color: #765000">About Mental Health – Anxiety</a><br>
-			<a href="internal:///thisarticle?category=selfhelp&title=Anger Management&id=" style="color: #765000">About Self-Care – Anger Management</a><br>
-			<a href="internal:///meditation/meditation" style="color: #765000">About Self-Care – Mindful Pauses</a><br>
-		</div>
-		<div style="display: flex; flex-direction: column; flex: 1">
-			<p>Watch a video:</p>
-			<a href="https://youtu.be/gAMbkJk6gnE">
-				<img src="../../assets/articleAssets/aboutself/identifytameemotions/page10-image1.png">
-			</a>
-		</div>
+		<h1><b>YOU MAY BE INTERESTED IN THESE TOO:</b></h1>
+
+		<p>
+			<a href="internal:///thisarticle?category=aboutmentalhealth&title=Attention Deficit Hyperactivity Disorder&id=8" style="color: #765000">About Mental Health – ADHD</a>
+			<br><br>
+			<a href="internal:///thisarticle?category=aboutmentalhealth&title=Anxiety&id=15" style="color: #765000">About Mental Health – Anxiety</a>
+			<br><br>
+			<a href="internal:///thisarticle?category=selfhelp&title=Identify & Tame Your Emotions&id=4" style="color: #765000">Understanding Yourself – Identify & Tame Your Emotion</a>
+			<br><br>
+			<a href="internal:///thisarticle?category=selfhelp&title=Distress Signs&id=6" style="color: #765000">Understanding Yourself – Distress Signs</a>
+			<br><br>
+			<a href="internal:///thisarticle?category=storiesfromothers&title=Helplines&id=12" style="color: #765000">Others – Helplines</a>
+		</p>
 	</div>
 </body>
 </html>
