--- a/articleAssets/aboutmentalhealth/asd/page2.html
+++ b/articleAssets/aboutmentalhealth/asd/page2.html
@@ -4,20 +4,38 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<div style="display: flex">
-		<div style="flex: 6">
-			<h2>WHAT IS IT</h2>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<h1 style="text-align: center;"><b>WHAT IS IT?</b></h1>
 
-			Autism Spectrum Disorder (ASD) is a neurodevelopmental condition that typically appear in the early part of your life and last through your lifetime. Being a spectrum type of disorder, there is a wide range in the type and severity of symptoms. People with ASD are known to have more challenges with social interactions, communications and also exhibit restrictive or repetitive behaviours/ interests, which can cause some dysfunction in their school, work or other aspects of life.
-		</div> 
-		<img style="flex: 1" width="35%" src="../../assets/articleAssets/aboutmentalhealth/asd/page2-image1.png">
+		<p>Autism Spectrum Disorder (ASD) is a neurodevelopmental condition that typically appear in the early part of your life and last through your lifetime. Being a spectrum type of disorder, there is a wide range in the type and severity of symptoms. People with ASD are known to have more challenges with social interactions, communications and also exhibit restrictive or repetitive behaviours/ interests, which can cause some dysfunction in their school, work or other aspects of life.</p>
+
+		<img style="width: 90%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/asd/page2-image1.png">
 	</div>
 </body>
 </html>
