--- a/articleAssets/aboutmentalhealth/asd/page4.html
+++ b/articleAssets/aboutmentalhealth/asd/page4.html
@@ -4,33 +4,57 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-  <h3>Causes Of ASD</h3>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<p style="text-align: center;"><b>There are no known direct causes, but the risk of developing ASD can be increased through a combination of many contributing factors such as:</b></p>
 
-	There are no known direct causes, but the risk of developing ASD can be increased through a combination of many contributing factors such as:
+		<p style="display: flex; flex: 6; flex-direction: column;">
+			<b>Genetics</b>
 
-	<div style="display: flex; gap: 10px">
-		<img style="flex: 1" src="../../assets/articleAssets/aboutmentalhealth/asd/page4-image1.png">
+			<ul>
+				<li>If one child has ASD, there is a 20% greater risk of the next child developing ASD</li>
+				<li>Existing genetic syndromes e.g., 1 in 3 people with Fragile X syndrome* have ASD</li>
+			</ul>
 
-		<div style="flex: 6">
-			<p style="display: flex; flex: 6; flex-direction: column;">
-				<b>Genetics</b>
-	
-				<ul>
-					<li>If one child has ASD, there is a 20% greater risk of the next child developing ASD</li><br>
-					<li>Existing genetic syndromes e.g., 1 in 3 people with Fragile X syndrome* have ASD</li>
-				</ul>
-				<br><br>
+			<span style="font-style: italic;">* You can find out more about fragile X syndrome <a style="font-style: inherit; color: black" href="https://www.healthdirect.gov.au/fragile-x-syndrome">here</a>.</span>
+		</p>
 
-				<i>* You can find out more about fragile X syndrome <a href="https://www.healthdirect.gov.au/fragile-x-syndrome">here</a></i>
-			</p>
-		</div>
+		<p>
+			<b>Environmental</b>
+
+			<ul>
+				<li>Parents giving birth in their later years in life.</li>
+				<li>Prenatal exposure to air pollution or certain pesticides</li>
+				<li>Pre-birth exposure to harmful chemicals</li>
+				<li>Maternal obesity, diabetes or immune system disorders</li>
+				<li>Prematurity (before 37 weeks) or very low birth weight</li>
+			</ul>
+		</p>
 	</div>
 </body>
 </html>
