--- a/articleAssets/aboutmentalhealth/asd/page7.html
+++ b/articleAssets/aboutmentalhealth/asd/page7.html
@@ -4,17 +4,44 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<div style="display: flex; align-items: center; justify-content: center;">
-		<span style="flex: 1"></span>
-		<img width="45%" src="../../assets/articleAssets/aboutmentalhealth/asd/page8-image1.png">
-		<span style="flex: 1"></span>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<h1 style="text-align: center;"><b>IMPACT ON NS</b></h1>
+
+		<p>
+			The Army being a highly corroborative and teamplay environment can be very daunting to those with ASD in terms of social interaction and being adaptive to different ways of doing things. Guidance is often needed to help ASD change their set routine, which can be extremely uncomfortable to them.
+		</p>
+
+		<p>
+			On the flip side, some of the symptoms of people with ASD can be a strength! For instance, being able to go deep into their interests meant they excel in learning the details and typically remember what they learnt for long period of time. This makes them great subject-matter-experts (SME) in their chosen field.
+		</p>
+
+		<img style="width: 50%; object-fit: contain; align-self: center; transform: translate(50%, -20%)" src="../../assets/articleAssets/aboutmentalhealth/asd/page7-image1.png">
 	</div>
 </body>
 </html>
