--- a/articleAssets/aboutmentalhealth/asd/page9.html
+++ b/articleAssets/aboutmentalhealth/asd/page9.html
@@ -4,28 +4,50 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<p>
-		They also tend to be strong visual and auditory learners, excelling in topics like math, science, computing, programming, music or art. Matching them to the right type of work nature can help them derive more meaningful serving with less adjustment issues.
-	</p>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<h1 style="text-align: center;"><b>TREATMENT</b></h1>
 
-	<p>
-		Read this article for stories of ASD personnel at work: <br>
-		<a href="https://www.channelnewsasia.com/cnainsider/invisible-struggle-people-high-functioning-autism-workplace-hire-1965121">https://www.channelnewsasia.com/cnainsider/invisible-struggle-people-high-functioning-autism-workplace-hire-1965121</a>
-	</p>
+		<p>Depending on the ability and severity of the symptoms, on can learn the skills that are lacking or build on strengths if given early intervention. Working closely with a consistent mental health care provider will help you find the right combination of treatment such as:</p>
 
-	<img style="width: 5%;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page12-image1.png">
-	<p>
-		Or watch what the life of an ASD person could be: <br>
-		<a href="https://www.youtube.com/watch?v=sKC3Gp90OxM">https://www.youtube.com/watch?v=sKC3Gp90OxM</a><br><br>
-		<a href="https://www.youtube.com/watch?v=f0ozTH5t-7o">https://www.youtube.com/watch?v=f0ozTH5t-7o</a><br><br>
-		<a href="https://www.youtube.com/watch?v=47S-wnKND6s">https://www.youtube.com/watch?v=47S-wnKND6s</a>
-	</p>
+		<p>
+			<b>Medication</b>
+			<br>
+			While no medications can cure ASD core symptoms, but specific medications can help control or ease the symptoms e.g., anxiety.
+		</p>
+
+		<p>
+			<b>Therapy</b>
+			<br>
+			Behavioural and communication therapy can help reduce certain disruptive behaviours or introduce skills like recognising social cues or emotional expression.
+		</p>
+
+		<img style="width: 60%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/asd/page9-image1.png">
+	</div>
 </body>
 </html>
