--- a/articleAssets/aboutmentalhealth/asd/page3.html
+++ b/articleAssets/aboutmentalhealth/asd/page3.html
@@ -4,26 +4,42 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<h3>Did You Know</h3>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<h1 style="text-align: center;"><b>Did You Know</b></h1>
 
-	<p style="display: flex; flex-direction: row;">
-		Eye contact can be uncomfortable for some people with ASD, and you may notice them avoiding your gaze but that doesn’t mean they aren’t paying attention!
+		<img style="width: 30%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/asd/page3-image1.png">
 
-		<img style="flex: 1" width="10%" src="../../assets/articleAssets/aboutmentalhealth/asd/page3-image1.png">
-	</p>
+		<p style="text-align: center; margin-top: -40px">Eye contact can be uncomfortable for some people with ASD, and you may notice them avoiding your gaze but that doesn’t mean they aren’t paying attention!</p>
 
-	<p style="display: flex; flex-direction: row;">
+		<img style="width: 30%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/asd/page3-image2.png">
 
-		While people with ASD may have difficulty expressing emotions and lack social skills, in turn avoid interaction, it doesn’t mean they don’t have feelings or do not want to connect with you! They may just not know how. Do give them a little more patience when getting to know them.
-
-		<img style="flex: 1" width="10%" src="../../assets/articleAssets/aboutmentalhealth/asd/page3-image2.png">
-	</p>
+		<p style="text-align: center; margin-top: -16px;">While people with ASD may have difficulty expressing emotions and lack social skills, in turn avoid interaction, it doesn’t mean they don’t have feelings or do not want to connect with you! They may just not know how. Do give them a little more patience when getting to know them.</p>
+	</div>
 </body>
 </html>
