--- a/articleAssets/aboutmentalhealth/asd/page5.html
+++ b/articleAssets/aboutmentalhealth/asd/page5.html
@@ -4,25 +4,47 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<p>
-		<b>Environmental</b>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<h1 style="text-align: center;"><b>SYMPTOMS</b></h1>
 
-		<ul>
-			<li>Parents giving birth in their later years in life.</li>
-			<li>Prenatal exposure to air pollution or certain pesticides</li>
-			<li>Pre-birth exposure to harmful chemicals</li>
-			<li>Maternal obesity, diabetes or immune system disorders</li>
-			<li>Prematurity (before 37 weeks) or very low birth weight</li>
-		</ul>
+		It is also not uncommon that some ASD symptoms are initially misunderstood as Attentional Deficit and Hyperactivity Disorder (ADHD) symptoms due to the similarity in behavioural presentation.
 
-		<img style="flex: 1" width="30%" src="../../assets/articleAssets/aboutmentalhealth/asd/page5-image1.png">
-	</p>
+		<p>
+			Nonetheless, the two core autism symptoms are:
+				
+			<ul>
+				<li>Challenges with social communication and interaction skills</li>
+				<li>Restricted and repetitive behaviours</li>
+			</ul>
+		</p>
+
+		<img style="width: 110%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/asd/page5-image1.png">
+	</div>
 </body>
 </html>
