--- a/articleAssets/aboutmentalhealth/asd/page8.html
+++ b/articleAssets/aboutmentalhealth/asd/page8.html
@@ -4,21 +4,51 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<h2>IMPACT ON NS</h2>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<img style="width: 20%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/asd/page8-image1.png">
 
-	<p>
-		The Army being a highly corroborative and teamplay environment can be very daunting to those with ASD in terms of social interaction and being adaptive to different ways of doing things. Guidance is often needed to help ASD change their set routine, which can be extremely uncomfortable to them.
-	</p>
+		<p>
+			They also tend to be strong visual and auditory learners, excelling in topics like math, science, computing, programming, music or art. Matching them to the right type of work nature can help them derive more meaningful serving with less adjustment issues.
+		</p>
 
-	<p>
-		On the flip side, some of the symptoms of people with ASD can be a strength! For instance, being able to go deep into their interests meant they excel in learning the details and typically remember what they learnt for long period of time. This makes them great subject-matter-experts (SME) in their chosen field.
-	</p>
+		<p>
+			Read this article for stories of ASD personnel at work: <br>
+			<a style="color: black" href="https://www.channelnewsasia.com/cnainsider/invisible-struggle-people-high-functioning-autism-workplace-hire-1965121">https://www.channelnewsasia.com/cnainsider/ invisible-struggle-people-high-functioning-autism-workplace-hire-1965121</a>
+		</p>
+
+		
+		<p>
+			Or watch what the life of an ASD person could be: <br>
+			<a style="color: black" href="https://www.youtube.com/watch?v=sKC3Gp90OxM">https://www.youtube.com/watch?v=sKC3Gp90OxM</a><br>
+			<a style="color: black" href="https://www.youtube.com/watch?v=f0ozTH5t-7o">https://www.youtube.com/watch?v=f0ozTH5t-7o</a><br>
+			<a style="color: black" href="https://www.youtube.com/watch?v=47S-wnKND6s">https://www.youtube.com/watch?v=47S-wnKND6s</a>
+		</p>
+	</div>
 </body>
 </html>
