fix: redesigned bipolar article
Signed-off-by: oscitate <ephie8654@outlook.com>

--- a/articleAssets/aboutmentalhealth/bipolar/page2.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page2.html
@@ -4,22 +4,42 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<h2>WHAT IS IT</h2>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<h1 style="text-align: center;"><b>WHAT IS IT?</b></h1>
 
-	<p>Bipolar disorder is characterised by extreme mood swings from being very happy and energetic (maniac episode) to very sad and demotivated (depressive episode).</p>
+		<p>Bipolar disorder is characterised by extreme mood swings from being very happy and energetic (maniac episode) to very sad and demotivated (depressive episode).</p>
 
-	<p>In 2019, approximately 1 in 150 adults (40 million people, or 0.53% of the global population) were living with bipolar disorder. While the prevalence of bipolar disorder among men and women is approximately equal, available data indicate that women are more often diagnosed.</p>
+		<p>In 2019, approximately 1 in 150 adults (40 million people, or 0.53% of the global population) were living with bipolar disorder. While the prevalence of bipolar disorder among men and women is approximately equal, available data indicate that women are more often diagnosed.</p>
 
-	<div style="display: flex">
 		<p style="flex: 3">The exact cause of bipolar is yet known, but can be triggered by extreme stress, genetic or chemical influence or life-changing events. It can occur to anyone at any point in time.</p>
-		<img style="flex: 2; width: 25%" src="../../assets/articleAssets/aboutmentalhealth/bipolar/page2-image1.png">
+
+		<img style="width: 60%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/bipolar/page2-image1.png">
 	</div>
 </body>
 </html>
