--- a/articleAssets/aboutmentalhealth/bipolar/page3.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page3.html
@@ -4,19 +4,48 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<div style="display: flex; background-color: black; color: white; flex-direction: column; align-items: center;">
-		<p style="flex: 1">There are four types of Bipolar Disorder</p>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<p style="text-align: center;"><b>There are four types of Bipolar Disorder*</b></p>
+
+		<img style="width: 110%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/bipolar/page3-image1.png">
+
+		<p>
+			<b style="text-decoration: underline;">Bipolar I Disorder</b>
+			<br>
+			Short manic episodes, or severe manic symptoms that needs immediate hospital care. Depressive episodes usually occur for a period of time as well.
+		</p>
+			
+		<p>
+			<b style="text-decoration: underline;">Bipolar II Disorder</b>
+			<br>
+			Defined by a pattern of depressive episodes and hypomanic episodes, but without the full-blown manic symptoms.
+		</p>
 	</div>
-
-	<br><br>
-
-	<img style="width: 100%" src="../../assets/articleAssets/aboutmentalhealth/bipolar/page3-image1.png">
 </body>
 </html>
