--- a/articleAssets/aboutmentalhealth/bipolar/page4.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page4.html
@@ -4,43 +4,48 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
-	table, th, td {
-		border: 1px solid black;
-		border-collapse: collapse;
+  html * {
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+	b {
+		font-weight: 700;
 	}
 
-	th, td {
-		padding: 3px;
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
 	}
 </style>
 <body>
-	<table>
-		<tr>
-			<td>
-				<b>Bipolar 1 Disorder</b>
-			</td>
-			<td>Short manic episodes, or severe manic symptoms that needs immediate hospital care. Depressive episodes usually occur for a period of time as well.</td>
-		</tr>
-		<tr>
-			<td>
-				<b>Bipolar II Disorder</b>
-			</td>
-			<td>Defined by a pattern of depressive episodes and hypomanic episodes, but without the full-blown manic symptoms.</td>
-		</tr>
-		<tr>
-			<td>
-				<b>Cyclothymic Disorder (also called Cyclothymia)</b>
-			</td>
-			<td>Defined by numerous periods of hypomanic symptoms and depressive symptoms lasting for a period of time. However, the symptoms do not meet the diagnostic requirements for a hypomanic episode and a depressive episode to be classified as above.</td>
-		</tr>
-		<tr>
-			<td>
-				<b>Others</b>
-			</td>
-			<td>Defined by Bipolar Disorder symptoms that do not match the three categories listed above</td>
-		</tr>
-	</table>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<p style="text-align: center;"><b>There are four types of Bipolar Disorder*</b></p>
+
+		<img style="width: 110%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/bipolar/page3-image1.png">
+
+		<p>
+			<b style="text-decoration: underline;">Cyclothymic Disorder (also called Cyclothymia)</b>
+			<br>
+			Defined by numerous periods of hypomanic symptoms and depressive symptoms lasting for a period of time. However, the symptoms do not meet the diagnostic requirements for a hypomanic episode and a depressive episode to be classified as above.
+		</p>
+			
+		<p>
+			<b style="text-decoration: underline;">Others</b>
+			<br>
+			Defined by Bipolar Disorder symptoms that do not match the three categories listed above
+		</p>
+	</div>
 </body>
 </html>
