--- a/articleAssets/aboutmentalhealth/bipolar/page6.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page6.html
@@ -4,28 +4,52 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<h2>SYMPTOMS</h2>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<h1 style="text-align: center;"><b>SYMPTOMS</b></h1>
 
-	<p>
-		Depressive episode
-		<ul>
-			<li>Feel irritable</li>
-			<li>Feel like they can't enjoy things they once liked</li>
-			<li>Feel very sad, worthless or hopeless</li>
-			<li>Have thoughts about death or suicide</li>
-			<br>
-			<li>Feel tired or “slowed down”</li>
-			<li>Have decreased activity levels</li>
-			<li>Have trouble concentrating</li>
-			<li>Have trouble sleeping, or sleep too much</li>
-		</ul>
-	</p>
+		<p>
+			<b>Depressive episode</b>
+
+			<ul>
+				<li>Feel irritable</li>
+				<li>Feel like they can't enjoy things they once liked</li>
+				<li>Feel very sad, worthless or hopeless</li>
+				<li>Have thoughts about death or suicide</li>
+				<br>
+				<li>Feel tired or “slowed down”</li>
+				<li>Have decreased activity levels</li>
+				<li>Have trouble concentrating</li>
+				<li>Have trouble sleeping, or sleep too much</li>
+			</ul>
+		</p>
+
+		<img style="width: 80%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/bipolar/page5-image1.png">
+	</div>
 </body>
 </html>
