--- a/articleAssets/aboutmentalhealth/bipolar/page9.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page9.html
@@ -4,13 +4,44 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<img width="100%" src="../../assets/articleAssets/aboutmentalhealth/bipolar/page9-image1.png">
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<h1><b>YOU MAY BE INTERESTED IN THESE TOO:</b></h1>
+
+		<p>
+			<a href="internal:///thisarticle?category=aboutmentalhealth&title=Depression&id=" style="color: #765000">About Mental Health – Depression</a>
+			<br><br>
+			<a href="internal:///thisarticle?category=aboutself&title=Identify & Tame Your Emotions&id=4" style="color: #765000">Understanding Yourself – Identify & Tame Your Emotion</a>
+			<br><br>
+			<a href="internal:///thisarticle?category=aboutself&title=Distress Signs&id=6" style="color: #765000">Understanding Yourself – Distress Signs</a>
+			<br><br>
+			<a href="internal:///thisarticle?category=storiesfromothers&title=Helplines&id=12" style="color: #765000">Others – Helplines</a>
+		</p>
+	</div>
 </body>
 </html>
