--- a/articleAssets/aboutmentalhealth/bipolar/page1.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page1.html
@@ -4,18 +4,38 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-  <h2>TL:DR</h2>
-  <p style="font-style: italic;">Date of post: 6 May 24</p>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+    <img style="width: 100%; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/aboutmentalhealth.png">
 
-	<p>Bipolar disorder (formerly called manic-depressive illness or manic depression) can cause unusual swings in a person's mood, energy level, and concentration. Transiting through the various period of high energy (maniac episodes) and low energy (depressive episodes) can be disruptive to their well-being, in turn affect their day-to-day activities as well as their relationship with others. </p>
-	
-	<p>While there is no direct cure for bipolar, the symptoms can be effectively managed through long term and continuous treatment such as combination of medication and psychotherapy.</p>
+    <p>Bipolar disorder (formerly called manic-depressive illness or manic depression) can cause unusual swings in a person's mood, energy level, and concentration. Transiting through the various period of high energy (maniac episodes) and low energy (depressive episodes) can be disruptive to their well-being, in turn affect their day-to-day activities as well as their relationship with others. </p>
+    
+    <p>While there is no direct cure for bipolar, the symptoms can be effectively managed through long term and continuous treatment such as combination of medication and psychotherapy.</p>
+  </div>
 </body>
 </html>
