--- a/articleAssets/aboutmentalhealth/bipolar/page5.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page5.html
@@ -4,28 +4,50 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<h2>SYMPTOMS</h2>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<h1 style="text-align: center;"><b>SYMPTOMS</b></h1>
 
-	<p>
-		Maniac episode
-		<ul>
-			<li>More agitation, irritation, or "touchy"</li>
-			<br>
-			<li>Engage in risky and impulsive behaviours, such as spending a lot of money or reckless driving</li>
-			<li>Make grand and unrealistic plans</li>
-			<li>Show poor judgment and decision making</li>
-			<br>
-			<li>Feel very “high,” or elated</li>
-			<li>Talk really fast about a lot of different things</li>
-			<li>Have a lot of energy and increased activity level</li>
-		</ul>
-	</p>
+		<p>
+			<b>Maniac episode</b>
+
+			<ul>
+				<li>Engage in risky and impulsive behaviours, such as spending a lot of money or reckless driving</li>
+				<li>More agitation, irritation, or "touchy"</li>
+				<li>Make grand and unrealistic plans</li>
+				<li>Show poor judgment and decision making</li>
+				<li>Feel very “high,” or elated</li>
+				<li>Talk really fast about a lot of different things</li>
+				<li>Have a lot of energy and increased activity level</li>
+			</ul>
+		</p>
+
+		<img style="width: 80%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/bipolar/page5-image1.png">
+	</div>
 </body>
 </html>
