--- a/articleAssets/aboutmentalhealth/bipolar/page8.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page8.html
@@ -4,15 +4,42 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<h2>TREATMENT</h2>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<h1 style="text-align: center;"><b>TREATMENT</b></h1>
 
-	<p>Medicine is an essential part of the treatment plan but depending on the severity and characteristics shown by the individual, a mixture of psychotherapy or psychosocial intervention can be implemented to balance the side-effects, functioning needs and effectiveness.</p>
+		<p>Medicine is an essential part of the treatment plan but depending on the severity and characteristics shown by the individual, a mixture of psychotherapy or psychosocial intervention can be implemented to balance the side-effects, functioning needs and effectiveness.</p>
+
+		<img style="width: 115%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/bipolar/page8-image1.png">
+
+		<b style="font-style: italic;">
+			If you have or believe you have Bipolar Disorder and it is severely impacting your life, do seek professional help as soon you can! :) Remember given the right treatment, these problems can be managed to help you go through your NS life smoothly and improve your overall mental well-being/ functioning in the future!
+		</b>
+	</div>
 </body>
 </html>
