fix: update depression article links in other articles
Signed-off-by: oscitate <ephie8654@outlook.com>

--- a/articleAssets/aboutself/identifytameemotions/page12.html
+++ b/articleAssets/aboutself/identifytameemotions/page12.html
@@ -33,7 +33,7 @@
   <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
 		<h1><b>YOU MAY BE INTERESTED IN THESE TOO:</b></h1>
 
-		<a href="internal:///thisarticle?category=aboutmentalhealth&title=Depression&id=" style="color: #765000">About Mental Health – Depression</a><br>
+		<a href="internal:///thisarticle?category=aboutmentalhealth&title=Depression&id=16" style="color: #765000">About Mental Health – Depression</a><br>
 		<a href="internal:///thisarticle?category=aboutmentalhealth&title=Anxiety&id=" style="color: #765000">About Mental Health – Anxiety</a><br>
 		<a href="internal:///thisarticle?category=selfhelp&title=Anger Management&id=" style="color: #765000">About Self-Care – Anger Management</a><br>
 		<a href="internal:///meditation/meditation/" style="color: #765000">
