--- a/articleAssets/aboutmentalhealth/bipolar/page9.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page9.html
@@ -34,7 +34,7 @@
 		<h1><b>YOU MAY BE INTERESTED IN THESE TOO:</b></h1>
 
 		<p>
-			<a href="internal:///thisarticle?category=aboutmentalhealth&title=Depression&id=" style="color: #765000">About Mental Health – Depression</a>
+			<a href="internal:///thisarticle?category=aboutmentalhealth&title=Depression&id=16" style="color: #765000">About Mental Health – Depression</a>
 			<br><br>
 			<a href="internal:///thisarticle?category=aboutself&title=Identify & Tame Your Emotions&id=4" style="color: #765000">Understanding Yourself – Identify & Tame Your Emotion</a>
 			<br><br>
