fix: rename "stories from others" to "others"
Signed-off-by: oscitate <ephie8654@outlook.com>

--- a/articleAssets/aboutmentalhealth/depression/page8.html
+++ b/articleAssets/aboutmentalhealth/depression/page8.html
@@ -44,7 +44,7 @@
 			<br><br>
 			<a href="internal:///thisarticle?category=aboutself&title=Distress Signs&id=6" style="color: #765000">Understanding Yourself – Distress Signs</a>
 			<br><br>
-			<a href="internal:///thisarticle?category=storiesfromothers&title=Helplines&id=12" style="color: #765000">Others – Helplines</a>
+			<a href="internal:///thisarticle?category=others&title=Helplines&id=12" style="color: #765000">Others – Helplines</a>
 		</p>
 	</div>
 </body>
