--- a/articleAssets/aboutmentalhealth/whatispsychotherapy/page13.html
+++ b/articleAssets/aboutmentalhealth/whatispsychotherapy/page13.html
@@ -19,6 +19,6 @@
 		<a href="internal:///thisarticle?category=aboutself&title=Distress Signs&id=6" style="color: #765000">Understanding Yourself – Distress Signs</a><br>
 		<a href="internal:///thisarticle?category=aboutself&title=Eustress – Good Stress&id=7" style="color: #765000">Understanding Yourself – Eustress</a><br>
 		<a href="internal:///thisarticle?category=aboutself&title=Know Your Personality Type&id=3" style="color: #765000">Understanding Yourself – Know Your Personality Type</a><br>
-		<a href="internal:///thisarticle?category=storiesfromothers&title=Helplines&id=12" style="color: #765000">Others – Helplines</a><br>
+		<a href="internal:///thisarticle?category=others&title=Helplines&id=12" style="color: #765000">Others – Helplines</a><br>
 </body>
 </html>
