--- a/articleAssets/aboutmentalhealth/ocd/page10.html
+++ b/articleAssets/aboutmentalhealth/ocd/page10.html
@@ -41,7 +41,7 @@
 		<br>
 		<a href="internal:///thisarticle?category=aboutself&title=Distress Signs&id=6" style="color: #765000">Understanding Yourself – Distress Signs</a>
 		<br>
-		<a href="internal:///thisarticle?category=storiesfromothers&title=Helplines&id=12" style="color: #765000">Others – Helplines</a>
+		<a href="internal:///thisarticle?category=others&title=Helplines&id=12" style="color: #765000">Others – Helplines</a>
 	</div>
 </body>
 </html>
